<resources>
    <string name="app_name">Week2Daily1 Homework - Data Persistance(1)</string>
    <string name="User_Name">User Name</string>
    <string name="Save_User_Name">Click to save user name</string>
    <string name="Retrieve_User_Name">Retrieve User Name</string>
    <string name="To_Login">To Login!</string>
    <string name="Back_To_Main">Back to Main</string>
    <string name="Full_Name">Full Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Email_Address">Email Address</string>
    <string name="Skype_ID">Skype ID</string>
    <string name="Fb_User">Facebook User</string>
    <string name="Into_DB">Save to Database</string>
</resources>
