<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/User_Name"/>

    <Button
        android:id="@+id/btnSaveUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save_User_Name"
        android:onClick="Click"/>

    <TextView
        android:id="@+id/tvUserNameIs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btnRtrvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Retrieve_User_Name"
        android:onClick="Click"/>

    <Button
        android:id="@+id/btntoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/To_Login"
        android:onClick="Click"/>

</LinearLayout>